[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=64",
    "setuptools_scm>=8",
]
[tool.setuptools.packages.find]
include = [
    "adascape",
    "adascape.*",
]

[tool.setuptools_scm]
fallback_version = "9999"
version_file = "adascape/_version.py"

[project]
name = "adascape"
dynamic = ["version"]
authors = [
    {name = "Esteban Acevedo-Trejos", email = "esteban.acevedo-trejos@gfz-potsdam.de"},
    {name = "Katherine Kravitz", email = "kravitz@gfz-potsdam.de"},
    {name = "Benoît Bovy", email = "bbovy@gfz-potsdam.de"},
]
maintainers = [
    {name = "Fastscape contributors"},
]
license = {text = "GPLv3"}
description = "Simple adaptive speciation models as a landscape evolution model component"
keywords = ["simulation", "toolkit", "modeling", "speciation", "landscape"]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "dendropy@git+https://github.com/jeetsukumaran/DendroPy.git#egg=master",
    "fastscape",
    "toytree",
    "toyplot",
    "orographic_precipitation@git+https://github.com/EstebanAce/orographic-precipitation#egg=master",
]

[project.urls]
Repository = "https://github.com/fastscape-lem/adascape"

[tool.black]
line-length = 100

[tool.ruff]
# E402: module level import not at top of file
# E501: line too long - let black worry about that
# E731: do not assign a lambda expression, use a def
ignore = [
  "E402",
  "E501",
  "E731",
]
select = [
  "F", # Pyflakes
  "E", # Pycodestyle
  "W",
  "I", # isort
  "UP", # Pyupgrade
]
exclude = [".eggs", "doc"]
target-version = "py39"

[tool.ruff.isort]
known-first-party = ["adascape"]




